--- a/lib/localization/locales/manifest.json
+++ b/lib/localization/locales/manifest.json
@@ -1,3 +1,3 @@
 {
-  "supportedLanguages": ["en", "fr", "es", "pt-BR", "de", "tr", "zh-TW"]
+  "supportedLanguages": ["en", "fr", "es", "pt-BR", "de", "tr", "zh-CN", "zh-TW"]
 }
