Update apache.mdx (#784)
Was missing the opening stanza to enable mod_proxy for Apache.

Signed-off-by: Joe Brockmeier <jzb@zonker.net>

--- a/docs/docs/admin/environments/apache.mdx
+++ b/docs/docs/admin/environments/apache.mdx
@@ -56,6 +56,7 @@ Assuming you are protecting `anubistest.techaro.lol`, you need the following ser
 </VirtualHost>
 
 # HTTPS listener that forwards to Anubis
+<IfModule mod_proxy.c>
 <VirtualHost *:443>
        ServerAdmin your@email.here
        ServerName anubistest.techaro.lol
