feat(localization): add Japanese language translation (#772)
* feat(localization): add Japanese language translation

* fix(locales): add Japanese to the manifest

Signed-off-by: Xe Iaso <me@xeiaso.net>

* fix(locales): fix manifest

Signed-off-by: Xe Iaso <me@xeiaso.net>

---------

Signed-off-by: Xe Iaso <me@xeiaso.net>
Signed-off-by: Xe Iaso <xe.iaso@techaro.lol>
Co-authored-by: Xe Iaso <me@xeiaso.net>
Co-authored-by: Xe Iaso <xe.iaso@techaro.lol>

--- a/lib/localization/locales/manifest.json
+++ b/lib/localization/locales/manifest.json
@@ -1,3 +1,13 @@
 {
-  "supportedLanguages": ["en", "fr", "es", "pt-BR", "de", "tr", "zh-CN", "zh-TW"]
+  "supportedLanguages": [
+    "en",
+    "fr",
+    "es",
+    "pt-BR",
+    "ja",
+    "de",
+    "tr",
+    "zh-CN",
+    "zh-TW"
+  ]
 }
