chore(docs): fix typo in configuration/expressions (#811)
This example code block was missing a closing single quote.

Signed-off-by: Maxime Louet <maxime@saumon.io>

--- a/docs/docs/admin/configuration/expressions.mdx
+++ b/docs/docs/admin/configuration/expressions.mdx
@@ -123,7 +123,7 @@ In order to avoid this, make sure the header or query parameter you are testing 
     - 'path == "/index.php"'
     - '"title" in query'
     - '"action" in query'
-    - 'query["action"] == "history"
+    - 'query["action"] == "history"'
 ```
 
 This rule throws a challenge if and only if all of the following conditions are true:
