--- a/docs/docs/index.mdx
+++ b/docs/docs/index.mdx
@@ -65,6 +65,13 @@ Anubis is brought to you by sponsors and donors like:
     height="64"
   />
 </a>
+<a href="https://fabulous.systems/">
+  <img
+    src="/img/sponsors/fabulous-systems.webp"
+    alt="Cat eyes over the word Emma in a serif font"
+    height="64"
+  />
+</a>
 
 ## Overview
 
