--- a/lib/localization/locales/en.json
+++ b/lib/localization/locales/en.json
@@ -2,6 +2,7 @@
   "loading": "Loading...",
   "why_am_i_seeing": "Why am I seeing this?",
   "protected_by": "Protected by",
+  "protected_from": "From",
   "made_with": "Made with ❤️ in 🇨🇦",
   "mascot_design": "Mascot design by",
   "ai_companies_explanation": "You are seeing this because the administrator of this website has set up Anubis to protect the server against the scourge of AI companies aggressively scraping websites. This can and does cause downtime for the websites, which makes their resources inaccessible for everyone.",
