--- a/lib/localization/locales/es.json
+++ b/lib/localization/locales/es.json
@@ -2,6 +2,7 @@
   "loading": "Cargando...",
   "why_am_i_seeing": "¿Por qué veo esto?",
   "protected_by": "Protegido por",
+  "protected_from": "From",
   "made_with": "Hecho con ❤️ en 🇨🇦",
   "mascot_design": "Diseño de la mascota por",
   "ai_companies_explanation": "Ves esto porque el administrador de este sitio web ha configurado Anubis para proteger el servidor contra la plaga de empresas de IA que rastrean agresivamente los sitios web. Esto puede y causa tiempo de inactividad para los sitios web, haciendo que sus recursos sean inaccesibles para todos.",
