--- a/lib/localization/locales/et.json
+++ b/lib/localization/locales/et.json
@@ -2,6 +2,7 @@
   "loading": "Laadin...",
   "why_am_i_seeing": "Miks ma pean seda nägema?",
   "protected_by": "Kaitseb",
+  "protected_from": "From",
   "made_with": "Tehtud ❤️ga 🇨🇦s",
   "mascot_design": "Maskoti disainis",
   "ai_companies_explanation": "Seda näidatakse selle pärast, et selle lehe administraator on paigaldanud Anubise, et kaitsta serverit selle nuhtluse eest, mida kujutab endast AI firmade agressiivne veebikraapimine. Selle tagajärjeks võib olla ja tihti ongi see, et veebilehed lakkavad töötamast ja keegi ei saa nendele ligi.",
