--- a/lib/localization/locales/fil.json
+++ b/lib/localization/locales/fil.json
@@ -2,6 +2,7 @@
   "loading": "Naglo-load...",
   "why_am_i_seeing": "Bakit nakikita ko ito?",
   "protected_by": "Pinoprotekta ng",
+  "protected_from": "From",
   "made_with": "Ginawa na may ❤️ sa 🇨🇦",
   "mascot_design": "Disenyo ng Maskot ni/ng",
   "ai_companies_explanation": "Nakikita mo ito dahil ang tagapangasiwa ng website na ito ay nag-set up ng Anubis upang protektahan ang server laban sa salot ng mga kumpanya ng AI na aggresibong nagse-scrape ng mga website. Maaari nitong magdulot ng downtime para sa mga website, na gagawing hindi naa-access ang kanilang mga resource para sa lahat.",
