--- a/lib/localization/locales/fr.json
+++ b/lib/localization/locales/fr.json
@@ -2,6 +2,7 @@
   "loading": "Chargement...",
   "why_am_i_seeing": "Pourquoi je vois ceci ?",
   "protected_by": "Protégé par",
+  "protected_from": "From",
   "made_with": "Fait avec ❤️ au 🇨🇦",
   "mascot_design": "Design de la mascotte par",
   "ai_companies_explanation": "Vous voyez ceci car l'administrateur de ce site web a configuré Anubis pour protéger le serveur contre le fléau des entreprises d'IA qui scrapent agressivement les sites web. Cela peut et cause des temps d'arrêt pour les sites web, ce qui rend leurs ressources inaccessibles pour tout le monde.",
