--- a/lib/localization/locales/it.json
+++ b/lib/localization/locales/it.json
@@ -2,6 +2,7 @@
   "loading": "Caricamento...",
   "why_am_i_seeing": "Perché vedo questa schermata?",
   "protected_by": "Protetto da",
+  "protected_from": "From",
   "made_with": "Realizzato con ❤️ in 🇨🇦",
   "mascot_design": "Mascotte disegnata da",
   "ai_companies_explanation": "Vedi questa schermata perché l'amministratore di questo sito web ha installato Anubis per proteggere il server dalla piaga delle aziende di AI generativa che estraggono, senza freno, dati dai siti web. Questo comportamento causa disservizi per i siti web, rendendoli inaccessibili a tutti.",
