--- a/lib/localization/locales/ja.json
+++ b/lib/localization/locales/ja.json
@@ -2,6 +2,7 @@
   "loading": "ロード中...",
   "why_am_i_seeing": "なぜこれが表示されるのですか？",
   "protected_by": "Protected by",
+  "protected_from": "From",
   "made_with": "Made with ❤️ 🇨🇦",
   "mascot_design": "Mascot design by",
   "ai_companies_explanation": "このメッセージが表示されているのは、このウェブサイトの管理者が、AI企業による過剰なウェブスクレイピングからサーバーを守るためにAnubisを導入しているためです。これにより、ウェブサイトがダウンし、すべての利用者がリソースにアクセスできなくなる事態が発生することがあります。",
