--- a/lib/localization/locales/tr.json
+++ b/lib/localization/locales/tr.json
@@ -2,6 +2,7 @@
   "loading": "Yükleniyor...",
   "why_am_i_seeing": "Bunu neden görüyorum?",
   "protected_by": "Koruma sağlayan:",
+  "protected_from": "From",
   "made_with": "🇨🇦'da ❤️ ile yapıldı",
   "mascot_design": "Maskot tasarımı:",
   "ai_companies_explanation": "Bunu görüyorsunuz çünkü bu web sitesinin yöneticisi, yapay zeka şirketlerinin web sitelerini agresif şekilde kazımasına karşı sunucuyu korumak için Anubis'i kurdu. Bu tarz kazımalar sitelerin erişilemez olmasına ve kesintilere neden olabiliyor.",
