chore: fix capitalisation in bokmål and nynorsk (#959)

--- a/lib/localization/locales/nb.json
+++ b/lib/localization/locales/nb.json
@@ -2,7 +2,7 @@
   "loading": "Laster inn...",
   "why_am_i_seeing": "Hvorfor ser jeg dette?",
   "protected_by": "Beskyttet av",
-  "protected_from": "Fra",
+  "protected_from": "fra",
   "made_with": "Laget med ❤️ i 🇨🇦",
   "mascot_design": "Maskotdesign av",
   "ai_companies_explanation": "Du ser dette fordi administratoren av dette nettstedet har satt opp Anubis for å beskytte sørveren mot plagen av KI-selskaper som aggressivt skraper nettsteder. Dette kan, og fortsetter med å, forårsake driftstans for nettstedene, som gjør ressursene deres utilgjengelige for alle.",
@@ -53,7 +53,7 @@
   "js_challenge_error": "Utfordringsfeil!",
   "js_challenge_error_msg": "Mislyktes i å tolke sjekkalgoritmen. Du burde laste inn denne siden på nytt.",
   "js_calculating_difficulty": "Beregner…<br/>Vanskelighetsnivå:",
-  "js_speed": "Hastighet:",
+  "js_speed": "hastighet:",
   "js_verification_longer": "Verifisering tar lengre enn forventet. Vennligst ikke last inn denne siden på nytt.",
   "js_success": "Vellykket!",
   "js_done_took": "Ferdig! Tok",
