--- a/lib/localization/locales/nn.json
+++ b/lib/localization/locales/nn.json
@@ -2,7 +2,7 @@
   "loading": "Lastar inn...",
   "why_am_i_seeing": "Kvifor ser eg dette?",
   "protected_by": "Verna av",
-  "protected_from": "Frå",
+  "protected_from": "frå",
   "made_with": "Laga med ❤️ i 🇨🇦",
   "mascot_design": "Maskotdesign av",
   "ai_companies_explanation": "Du ser dette av di administratoren av denne nettstaden har sett opp Anubis for å verne sørvaren mot plaga av KI-selskap som aggressivt skrapar nettstader. Dette kan, og held frem med å, forårsake driftstans for nettstadene, som gjer ressursane deira utilgjengelege for alle.",
@@ -53,7 +53,7 @@
   "js_challenge_error": "Utfordringsfeil!",
   "js_challenge_error_msg": "Mislukkast i å tolke sjekkalgoritmen. Du burde laste inn denne sida på nytt.",
   "js_calculating_difficulty": "Reknar…<br/>Vanskenivå:",
-  "js_speed": "Fart:",
+  "js_speed": "fart:",
   "js_verification_longer": "Verifisering tek lengre enn forventa. Venlegast ikkje last inn denne sida på nytt.",
   "js_success": "Vellykka!",
   "js_done_took": "Ferdig! Tok",
