--- a/lib/localization/locales/cs.json
+++ b/lib/localization/locales/cs.json
@@ -5,7 +5,7 @@
   "protected_from": "Od",
   "made_with": "Vytvořeno s ❤️ v 🇨🇦",
   "mascot_design": "Design maskota od",
-  "ai_companies_explanation": "Vidíte to proto, že správce této webové stránky nastavil Anubis na ochranu serveru před pohromou AI společností agresivně stahujících webové stránky. To může, a také způsobuje výpadky webových stránek, což je činí nepřístupnými pro všechny.",
+  "ai_companies_explanation": "Vidíte to proto, že správce této webové stránky nastavil Anubis na ochranu serveru před pohromou AI společností, které agresivně stahují webové stránky. To může a skutečně způsobuje výpadky webových stránek, čímž se jejich zdroje stávají pro všechny nedostupnými.",
   "anubis_compromise": "Anubis je kompromis. Anubis používá schéma Proof-of-Work v duchu Hashcash, návrhu schématu proof-of-work pro snížení e-mailového spamu. Myšlenka je, že na individuálních úrovních je dodatečná zátěž zanedbatelná, ale na úrovni masového použití se sčítá a činí stahování mnohem dražším.",
   "hack_purpose": "Ve výsledku je to hack, jehož skutečným účelem je poskytnout \"dostatečně dobré\" prozatímní řešení, které nám poskytuje čas pracovat na ověřování a identifikaci robotů (např. prostřednictvím toho, jak vykreslují fonty), tak aby stránka s výzvou proof of work nemusela být prezentována uživatelům, kteří jsou legitimní.",
   "jshelter_note": "Upozorňujeme, že Anubis vyžaduje použití moderních funkcí JavaScriptu, které rozšíření jako JShelter omezují. Prosím zakažte JShelter nebo jiná podobná rozšíření pro tuto doménu.",
@@ -25,28 +25,28 @@
   "iters_a": "Iterace A",
   "time_b": "Čas B",
   "iters_b": "Iterace B",
-  "static_check_endpoint": "Toto je pouze kontrolní bod pro přístup na tuto stránku.",
+  "static_check_endpoint": "Toto je pouze kontrolní koncový bod pro přístup na tuto stránku.",
   "authorization_required": "Vyžadována autorizace",
-  "cookies_disabled": "Váš prohlížeč je nakonfigurován tak, aby zakázal cookies. Anubis vyžaduje cookies pro legitimní zájem zajistit, že jste legitimní uživatel. Prosím povolte cookies pro tuto doménu",
+  "cookies_disabled": "Váš prohlížeč je nakonfigurován tak, aby zakázal cookies. Anubis vyžaduje cookies pro zajištění, že jste platný klient. Prosím povolte cookies pro tuto doménu",
   "access_denied": "Přístup zamítnut: kód chyby",
   "dronebl_entry": "DroneBL nahlásil záznam",
   "see_dronebl_lookup": "viz",
-  "internal_server_error": "Interní chyba serveru: správce špatně nakonfiguroval Anubis. Kontaktujte správce a požádejte ho, aby se do systémových záznamů",
+  "internal_server_error": "Interní chyba serveru: správce špatně nakonfiguroval Anubis. Kontaktujte správce a požádejte ho, aby zkontroloval systémové záznamy.",
   "invalid_redirect": "Neplatné přesměrování",
   "redirect_not_parseable": "URL přesměrování nelze analyzovat",
   "redirect_domain_not_allowed": "Doména přesměrování není povolena",
   "failed_to_sign_jwt": "nepodařilo se podepsat JWT",
   "invalid_invocation": "Neplatné vyvolání MakeChallenge",
   "client_error_browser": "Chyba prohlížeče: Ujistěte se, že váš prohlížeč je aktuální a zkuste to později.",
-  "oh_noes": "Ale ne!",
+  "oh_noes": "Jejda!",
   "benchmarking_anubis": "Testování Anubise!",
   "you_are_not_a_bot": "Nejste robot!",
   "making_sure_not_bot": "Ujišťujeme se, že nejste robot!",
   "celphase": "CELPHASE",
   "js_web_crypto_error": "Váš prohlížeč nepodporuje funkci web.crypto. Používáte zabezpečené připojení?",
-  "js_web_workers_error": "Váš prohlížeč nepodporuje web workers (Anubis je používá, aby zabránil zamrznutí vašeho prohlížeče). Máte nainstalovano rozšíření JShelter nebo podobné?",
+  "js_web_workers_error": "Váš prohlížeč nepodporuje web workers (Anubis je používá, aby zabránil zamrznutí vašeho prohlížeče). Máte nainstalováno rozšíření JShelter nebo podobné?",
   "js_cookies_error": "Váš prohlížeč neukládá cookies. Anubis používá cookies k určení, kteří klienti prošli výzvami uložením podepsaného tokenu v cookie. Prosím povolte ukládání cookies pro tuto doménu. Názvy cookies, které Anubis ukládá, se mohou měnit bez upozornění. Názvy a hodnoty cookies nejsou součástí veřejného API.",
-  "js_context_not_secure": "Váše připojení není bezpečné!",
+  "js_context_not_secure": "Vaše připojení není bezpečné!",
   "js_context_not_secure_msg": "Zkuste se připojit přes HTTPS nebo informujte správce o nastavení HTTPS. Pro více informací viz <a href=\"https://developer.mozilla.org/en-US/docs/Web/Security/Secure_Contexts#when_is_a_context_considered_secure\">MDN</a>.",
   "js_calculating": "Počítám...",
   "js_missing_feature": "Chybějící funkce",
@@ -58,7 +58,7 @@
   "js_success": "Úspěch!",
   "js_done_took": "Hotovo! Trvalo to",
   "js_iterations": "iterací",
-  "js_finished_reading": "Dokončil jsem čtení, pokračovat →",
+  "js_finished_reading": "Čtení dokončeno, pokračovat →",
   "js_calculation_error": "Chyba výpočtu!",
   "js_calculation_error_msg": "Nepodařilo se vypočítat výzvu:"
 }
